--- a/Alan/src/main/webapp/WEB-INF/jsp/cadastroProduto.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/cadastroProduto.jspx
@@ -28,8 +28,9 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="prodId">ID</label>
-                                    <input type="text" class="form-control" disabled="" value="${id}"/>
-                                    <input type="hidden" id="prodId" name="prodId" value="${id}"/>
+                                    <input type="text" class="form-control" disabled="" value="${produto.codPeca}"/>
+                                    <input type="hidden" id="prodId" name="prodId" value="${produto.codPeca}"/>
+                                    <input type="hidden" id="edicao" name="edicao" value="${edicao}"/>
                                 </div>
                             </div>
                         </div>
@@ -37,27 +38,36 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="nomeProd">Nome</label>
-                                    <input type="text" class="form-control" id="nomeProd" name="nomeProd" placeholder="Nome"/>
+                                    <input type="text" class="form-control" id="nomeProd" name="nomeProd" placeholder="Nome" required="required" value="${produto.nome}"/>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="filialId">Filial</label>
-                                    <select class="form-control" id="filialId" name="filialId">
-                                        <option value="0">Selecione...</option>
+                                    <select class="form-control" id="filialId" name="filialId" required="required">
+                                        <option value="">Selecione...</option>
                                         <c:forEach items="${filiais}" var="filial">
-                                        <option value="${filial.codigoFilial}">${filial.nomeFantasia}</option>
-                                    </c:forEach>
+                                            <option value="${filial.codigoFilial}">${filial.nomeFantasia}</option>
+                                        </c:forEach>
                                     </select>
+                                    <input type="hidden" id="hiddenFilialId" value="${produto.codigoFilial}" />
                                 </div>
                             </div>
                         </div>
-                       
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label class="block">Status</label>
+                                    <input type="radio" id="ativo" name="Status" value="true" /><label for="ativo" class="espacamento">Ativo</label>
+                                    <input type="radio" id="inativo" name="Status" value="false" /><label for="inativo">Inativo</label>
+                                    <input type="hidden" id="statusEdit" value="${usuario.status}"/>
+                                </div> 
+                            </div>
+                        </div>
                         
                         <div class="right">
                             <button type="submit" class="btn btn-success">Salvar</button>
-                            <button type="button" class="btn btn-danger">Descartar</button>
-                            <button type="button" class="btn btn-default">Cancelar</button>
+                            <button type="button" id="btnCancelar" class="btn btn-default">Cancelar</button>
                         </div>
                         
                     </form>
@@ -67,6 +77,7 @@
             <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"><![CDATA[/*Teste*/]]></script>
             <script type="text/javascript" src="resources/js/bootstrap.min.js"><![CDATA[/*Teste*/]]></script>
             <script type="text/javascript" src="resources/js/jquery.maskedinput.js"><![CDATA[/*Teste*/]]></script>
+            <script type="text/javascript" src="resources/js/cadastroProduto.js"><![CDATA[/*Teste*/]]></script>
         </body>
     </html>
 
