--- a/Alan/src/main/webapp/WEB-INF/jsp/buscaProdutos.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/buscaProdutos.jspx
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- 
-    Document   : buscaUsuarios
-    Created on : 12/05/2016, 00:20:57
+    Document   : buscaProdutos
+    Created on : 21/05/2016, 03:11:08
     Author     : Arthur
 -->
-<jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" 
-          xmlns:c="http://java.sun.com/jsp/jstl/core"
-          version="2.0">
+<jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" version="2.0">
 
     <jsp:directive.page contentType="text/html" pageEncoding="UTF-8"/>
 
     <html>
         <head>
-            <title>Consulta de Usuários</title>
+            <title>Consulta de Produtos</title>
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
             <link rel="stylesheet" href="resources/css/bootstrap.min.css"/>
             <link rel="stylesheet" href="resources/css/jquery.dataTables.min.css"/>
@@ -22,27 +20,27 @@
         <body>            
             <jsp:include page="menu.jspx"></jsp:include>
             <div class="container">
-                <h2>Consulta de Usuários </h2>                
-                <table id="usuarios" class="table table-striped table-bordered">
+                <h2>Consulta de Produtos </h2>                
+                <table id="produtos" class="table table-striped table-bordered">
                     <thead>
                         <tr>
                             <th>Id</th>
                             <th>Nome</th>
-                            <th>Login</th>
-                            <th>Perfil</th>
                             <th>Filial</th>
+                            <th>Quantidade</th>
+                            <th>Usuário</th>
                             <th>Ativo</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <c:forEach var="usuario" items="${Usuarios}">
+                        <c:forEach var="produto" items="${Produtos}">
                             <tr>
-                                <td class="id">${usuario.codigoUnitario}</td>
-                                <td>${usuario.nome}</td>
-                                <td>${usuario.login}</td>
-                                <td>${usuario.perfil}</td>
-                                <td>${usuario.filial}</td>
-                                <td>${usuario.status()}</td>
+                                <td class="id">${produto.codPeca}</td>
+                                <td>${produto.nome}</td>
+                                <td>${produto.filial}</td>
+                                <td>${produto.qtdPeca}</td>
+                                <td>${produto.usuario}</td>
+                                <td>${produto.status}</td>
                             </tr>           
                         </c:forEach>
                     </tbody>                    
@@ -57,7 +55,7 @@
             <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"><![CDATA[/*Teste*/]]></script>
             <script type="text/javascript" src="resources/js/bootstrap.min.js"><![CDATA[/*Teste*/]]></script>
             <script type="text/javascript" src="resources/js/jquery.dataTables.min.js"><![CDATA[/*Teste*/]]></script>
-            <script type="text/javascript" src="resources/js/buscaUsuarios.js"><![CDATA[/*Teste*/]]></script>
+            <script type="text/javascript" src="resources/js/buscaProdutos.js"><![CDATA[/*Teste*/]]></script>
         </body>
     </html>
 
