--- a/Alan/src/main/webapp/WEB-INF/jsp/cadastroUsuario.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/cadastroUsuario.jspx
@@ -32,8 +32,8 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="UsuarioId">ID</label>
-                                    <input type="text" class="form-control" disabled="" value="${usuario.codigoUnitario}"/>
-                                    <input type="hidden" id="usuarioId" name="usuarioId" value="${usuario.codigoUnitario}"/>
+                                    <input type="text" class="form-control" disabled="" value="${usuario.codigoUsuario}"/>
+                                    <input type="hidden" id="usuarioId" name="usuarioId" value="${usuario.codigoUsuario}"/>
                                     <input type="hidden" id="edicao" name="edicao" value="${edicao}"/>
                                 </div> 
                             </div>
