--- a/Alan/src/main/webapp/WEB-INF/jsp/venda.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/venda.jspx
@@ -41,19 +41,36 @@
                                     <div class="form-group">
                                         <label for="Valor">Valor</label>
                                         <input type="text" class="form-control" id="valor" name="Valor" disabled="true"/>
-                                    </div>
-                                </div>
-                            </div>
+                                    </div>                                    
+                                </div>                                                                                                
+                            </div>    
                             <div class="right">
-                                <button type="submit" class="btn btn-success">Salvar</button>
-                                <button type="button" class="btn btn-danger">Descartar</button>
-                                <button type="button" class="btn btn-default">Cancelar</button>
+                                <button type="button" class="btn btn-primary" id="btnIncluir">Incluir</button>
                             </div>
                         </form>
                     </div>
                 </div>
-                <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"></script>
-                <script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
+                <div class="container">
+                    <div class="box">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <table id="vendas" class="table table-bordered table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th>Produto</th>
+                                            <th>Quantidade</th>
+                                            <th>Valor</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"><![CDATA[/*Teste*/]]></script>
+                <script type="text/javascript" src="resources/js/bootstrap.min.js"><![CDATA[/*Teste*/]]></script>
+                <script type="text/javascript" src="resources/js/venda.js"><![CDATA[/*Teste*/]]></script>
             </body>
         </html>
 </jsp:root>
