--- a/Alan/src/main/webapp/WEB-INF/jsp/cadastroUsuario.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/cadastroUsuario.jspx
@@ -100,9 +100,10 @@
                             <button type="submit" class="btn btn-success">Salvar</button>
                             <button type="button" id="btnCancelar" class="btn btn-default">Cancelar</button>
                         </div>
-                        <!--<c:out value="${resposta.Mensagem}"></c:out>-->
+                        <c:out value="${resposta.mensagem}" />
                     </form>  
                 </div>
+                
             </div>
             <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"><![CDATA[/*Teste*/]]></script>
             <script type="text/javascript" src="resources/js/bootstrap.min.js"><![CDATA[/*Teste*/]]></script>
