--- a/Alan/src/main/webapp/WEB-INF/jsp/compra.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/compra.jspx
@@ -27,26 +27,26 @@
                                     <div class="col-md-2">
                                         <div class="form-group">
                                             <label for="CodigoDoProduto">Código do produto</label>
-                                            <input type="number" class="form-control" id="codProduto" name="CodigoProduto" min="0"/>
+                                            <input type="number" class="form-control" id="codProduto" name="CodigoProduto" min="0" value="${compra.codigoProduto}"/>
                                         </div>
                                     </div>
                                         
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label for="Produto">Produto</label>
-                                            <input type="text" class="form-control" id="Produto" name="Produto"/>
+                                            <input type="text" class="form-control" id="Produto" name="Produto" value="${compra.produto}"/>
                                         </div>
                                     </div>
                                     <div class="col-md-2">
                                         <div class="form-group">
                                             <label for="Preco">Preço</label>
-                                            <input type="number" class="form-control" id="Preco" name="Preco" min="0"/>
+                                            <input type="number" class="form-control" id="Preco" name="Preco" min="0" value="${compra.preco}"/>
                                         </div>    
                                     </div>
                                     <div class="col-md-2">
                                         <div class="form-group">
                                             <label for="Quantidade">Quantidade</label>
-                                            <input type="number" class="form-control" id="Quantidade" name="Quantidade" min="0"/>
+                                            <input type="number" class="form-control" id="Quantidade" name="Quantidade" min="0" value="${compra.quantidade}"/>
                                         </div>
                                     </div>
                                 </div>
@@ -68,15 +68,15 @@
                                             <th class="col-md-4">Produto</th>
                                             <th class="col-md-2">Preço</th>
                                             <th class="col-md-2">Quantidade</th>
-                                            
+                                            <th class="col-md-1"></th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                    <div class="right" id="remover"></div>
                                     </tbody>
                                 </table>
                             </div>
                         </div>
+                        <div class="right" id="salvarCompra"></div>
                     </div>
                 </div>
                 <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"><![CDATA[/*Teste*/]]></script>
