--- a/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
@@ -46,7 +46,14 @@
                             <li><a href="BuscaProdutos">Produto</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Relatorios</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Relatorios
+                        <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="RelatorioVenda">Venda</a></li>
+                        </ul>
+                    </li>
                     <li><a href="Logout">Logout</a></li>
                 </ul>
             </div>
