--- a/Alan/src/main/webapp/WEB-INF/jsp/relatorioVendas.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/relatorioVendas.jspx
@@ -22,7 +22,19 @@
         <body>            
             <jsp:include page="menu.jspx"></jsp:include>
             <div class="container">
-                <h2>Relatório de Vendas </h2>                
+                <h2>Relatório de Vendas </h2> 
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="produtoId">Produto</label>
+                        <select class="form-control" id="produtoId" name="produtoId" required="required">
+                            <option value="">Todos</option>
+                            <c:forEach items="${produtos}" var="produto">
+                                <option value="${produto.codigoProduto}">${produto.produto}</option>
+                            </c:forEach>
+                        </select>
+                    </div>
+                </div>
+                
                 <table id="vendas" class="table table-striped table-bordered">
                     <thead>
                         <tr>
